k8s/notification-controller-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-controller-deployment
spec:
  # Number of pods to create and manage
  replicas: 1
  # Allows deployment to get handle on created pods
  selector:
    matchLabels:
      component: notification
  # The pod configurationm same as in a Pod config file
  template:
    metadata:
      labels:
        component: notification
    spec:
      containers:
        - name: silence
          image: mikemcgarry/canary-silence
          volumeMounts:
            - name: data
              mountPath: /tmp/silence/data
        - name: feathers
          image: mikemcgarry/canary-feathers
          volumeMounts:
            - name: data
              mountPath: /tmp/feathers/data
      volumes:
        - name: data
          emptyDir: {}
