k8s/subscripton-controller-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscription-controller-deployment
spec:
  # Number of pods to create and manage
  replicas: 1
  # Allows deployment to get handle on created pods
  selector:
    matchLabels:
      component: api
  # The pod configurationm same as in a Pod config file
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - name: chirp
          image: mikemcgarry/canary-chirp
          ports:
            - containerPort: 5000
