k8s/view-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: view-deployment
spec:
  # Number of pods to create and manage
  replicas: 1
  # Allows deployment to get handle on created pods
  selector:
    matchLabels:
      component: web
  # The pod configurationm same as in a Pod config file
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: bird_cage
          image: mikemcgarry/canary-bird_cage
          ports:
            - containerPort: 3000
