k8s/subscription-controller-clusterip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: subscription-controller-clusterip-service
spec:
  # For development only
  type: ClusterIP
  ports:
      # Port inside node you can access pod/s from
    - port: 5000
      # Target port of pod/s
      targetPort: 5000
  # The meta data label of the pods to connect to
  selector:
    component: api
