k8s/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.global-static-ip-name: "canary-ingress"
    certmanager.k8s.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - air-monitor.com
        - www.air-monitor.com
      secretName: air-monitor-com
  rules:
    - host: air-monitor.com
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: view-clusterip-service
              servicePort: 3000
          - path: /api/(.*)
            backend:
              serviceName: subscription-controller-clusterip-service
              servicePort: 5000
    - host: www.air-monitor.com
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: view-clusterip-service
              servicePort: 3000
          - path: /api/(.*)
            backend:
              serviceName: subscription-controller-clusterip-service
              servicePort: 5000
